create add book endpoint
